# my_cursor_python_project

./: .gitignore  pyproject.toml
app/: __init__.py  main.py  models.py  repository.py  schemas.py  service.py
